src/objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account is the Parent Object and Payment is the child Object</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <description>Balance data from Quick Book.</description>
        <label>Balance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Batch_Jobs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payment is the child Object and Batch Job is the parent object.</description>
        <inlineHelpText>Select related Batch Job</inlineHelpText>
        <label>Batch Jobs</label>
        <referenceTo>Batch_Jobs__c</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Reference__c</fullName>
        <description>Customer Reference details from Quickbook</description>
        <label>Customer Reference</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocNumber__c</fullName>
        <description>DocNumber from Quick book</description>
        <label>DocNumber</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <description>DueDate from Quickbook.</description>
        <inlineHelpText>DueDate from Quickbook.</inlineHelpText>
        <label>DueDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_QuickBookId__c</fullName>
        <description>Payment Id from quick book.</description>
        <externalId>true</externalId>
        <label>Invoice QuickBookId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentQuickBookId__c</fullName>
        <label>PaymentQuickBookId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <description>TotalAmount from Quickbook</description>
        <label>TotalAmount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TxnDate__c</fullName>
        <description>TxnDate from Quickbook</description>
        <label>TxnDate</label>
        <type>Date</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>